bindings/matlab/proven_header.h


struct IntResult   { int32_t status; int64_t value; };
struct BoolResult  { int32_t status; int32_t value; };
struct FloatResult { int32_t status; double  value; };
struct StringResult { int32_t status; char* value; int32_t length; };