bindings/csharp/src/Proven/LibProven.cs


        /// <summary>Clamp value to [lo, hi] range.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern long proven_math_clamp(long lo, long hi, long value);

        /// <summary>Integer exponentiation with overflow checking.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_math_pow_checked(long baseValue, uint exp);

        // --------------------------------------------------------------------
        // SafeString - Text operations (4 functions)
        // --------------------------------------------------------------------

        /// <summary>Check if bytes are valid UTF-8.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_string_is_valid_utf8(byte[] ptr, nuint len);

        /// <summary>Escape string for SQL (single quotes). Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_string_escape_sql(byte[] ptr, nuint len);

        /// <summary>Escape string for HTML (prevents XSS). Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_string_escape_html(byte[] ptr, nuint len);

        /// <summary>Escape string for JavaScript string literals. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_string_escape_js(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafePath - Filesystem traversal prevention (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Check if path contains directory traversal sequences.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_path_has_traversal(byte[] ptr, nuint len);

        /// <summary>Sanitize filename by removing dangerous characters. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_path_sanitize_filename(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeEmail - Email validation (1 function)
        // --------------------------------------------------------------------

        /// <summary>Validate email address (RFC 5321 simplified).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_email_is_valid(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeUrl - URL parsing (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse a URL into components. Caller must free with proven_url_free.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_url_parse(byte[] ptr, nuint len);

        /// <summary>Free URL components allocated by proven_url_parse.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void proven_url_free(IntPtr components);

        // --------------------------------------------------------------------
        // SafeNetwork - IP address parsing (3 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse IPv4 address string.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IPv4Result proven_network_parse_ipv4(byte[] ptr, nuint len);

        /// <summary>Check if IPv4 address is private (RFC 1918).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_network_ipv4_is_private(IPv4Address addr);

        /// <summary>Check if IPv4 address is loopback (127.0.0.0/8).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_network_ipv4_is_loopback(IPv4Address addr);

        // --------------------------------------------------------------------
        // SafeCrypto - Cryptographic primitives (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Constant-time byte comparison (timing-attack safe).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_crypto_constant_time_eq(
            byte[] ptr1, nuint len1,
            byte[] ptr2, nuint len2);

        /// <summary>Fill buffer with cryptographically secure random bytes.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int proven_crypto_random_bytes(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeJson - JSON validation (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Check if string is valid JSON.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_json_is_valid(byte[] ptr, nuint len);

        /// <summary>Get JSON value type at root level.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int proven_json_get_type(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeDateTime - ISO 8601 date/time handling (4 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse ISO 8601 date string.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern DateTimeResult proven_datetime_parse(byte[] ptr, nuint len);

        /// <summary>Format DateTime as ISO 8601 string. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_datetime_format_iso8601(ProvenDateTime dt);

        /// <summary>Check if year is a leap year.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_datetime_is_leap_year(int year);

        /// <summary>Get number of days in a month. Returns 0 for invalid month.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte proven_datetime_days_in_month(int year, byte month);

        // --------------------------------------------------------------------
        // SafeFloat - Safe floating-point operations (5 functions)
        // --------------------------------------------------------------------

        /// <summary>Safe floating-point division.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_float_div(double a, double b);

        /// <summary>Check if float is finite (not NaN or Inf).</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_float_is_finite(double x);

        /// <summary>Check if float is NaN.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_float_is_nan(double x);

        /// <summary>Safe square root. Returns error for negative or NaN input.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_float_sqrt(double x);

        /// <summary>Safe natural logarithm. Returns error for non-positive or NaN input.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FloatResult proven_float_ln(double x);

        // --------------------------------------------------------------------
        // SafeHex - Hexadecimal encoding/decoding (3 functions)
        // --------------------------------------------------------------------

        /// <summary>Encode bytes to hex string. Caller must free result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern StringResult proven_hex_encode(
            byte[] ptr, nuint len,
            [MarshalAs(UnmanagedType.U1)] bool uppercase);

        /// <summary>Decode hex string to bytes. Caller must free with proven_hex_free.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_hex_decode(byte[] ptr, nuint len);

        /// <summary>Free hex decode result.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void proven_hex_free(IntPtr result);

        // --------------------------------------------------------------------
        // SafeChecksum (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Calculate CRC32 checksum.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntResult proven_checksum_crc32(byte[] ptr, nuint len);

        /// <summary>Verify CRC32 matches expected value.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern BoolResult proven_checksum_verify_crc32(byte[] ptr, nuint len, uint expected);

        // --------------------------------------------------------------------
        // SafePassword (2 functions)
        // --------------------------------------------------------------------

        /// <summary>Validate password strength.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_password_validate(byte[] ptr, nuint len);

        /// <summary>Check if password is in common passwords list.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool proven_password_is_common(byte[] ptr, nuint len);

        // --------------------------------------------------------------------
        // SafeVersion (3 functions)
        // --------------------------------------------------------------------

        /// <summary>Parse semantic version string.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr proven_version_parse(byte[] ptr, nuint len);

        /// <summary>Free version result resources.</summary>
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void proven_version_free(IntPtr version);

        // --------------------------------------------------------------------
        // SafeColor (3 functions)
        // --------------------------------------------------------------------
